Added color changes for smaller screen sizes to css with media query

--- a/WebVisualizations/html/index.html
+++ b/WebVisualizations/html/index.html
@@ -73,7 +73,7 @@
               of over 500
               cities scattered across the world. Next, we utilized Python and the Matplotlib module to inspect the data
               and create visual
-              representations of cloudiness, humidity, max temperature, and wind speed against latitidue. This site
+              representations of cloudiness, humidity, max temperature, and wind speed against latitude. This site
               includes those
               visualizations accompanied by insights into potential trends and a sample dataset.</p>
           </div>
