--- a/html/index.html
+++ b/html/index.html
@@ -56,6 +56,7 @@
   <!-- Create a parent container that is fluid to add in two rows which will also have container properties -->
   <div class="container-fluid">
     <div class="row">
+      <!-- Create the Summary container with image floating left and justified text -->
       <div class="col-lg-7 col-sm-12 container">
         <div class="row">
           <!-- col-lg-12 col-sm-12 sets responsiveness for the header, always takes up entire row -->
@@ -67,7 +68,8 @@
         <div class="row">
           <div class="col-lg-12 col-sm-12">
             <img class="img-fluid img-float" src="../Resources/assets/cloudiness.png">
-            <p class="text text-justify">The purpose of this project was to analyze how different characteristics of weather change
+            <p class="text text-justify">The purpose of this project was to analyze how different characteristics of
+              weather change
               as we approach
               the equator. To investigate, we first pulled data from OpenWeatherMap API and created a dataset consisting
               of over 500
@@ -79,9 +81,7 @@
           </div>
         </div>
       </div>
-
-
-      <!-- Create the Visualizations container with images-->
+      <!-- Create the Visualizations container with images -->
       <div class="col-lg-4 col-sm-12 container container-fit">
         <div class="row">
           <!-- col-lg-12 col-sm-12 sets responsiveness for the header, always takes up entire row -->
@@ -101,7 +101,8 @@
             <a href="humidity.html"> <img class="img-fluid img-right" src="../Resources/assets/humidity.png"></a>
           </div>
           <div class="col-lg-6 col-md-3">
-            <a href="max_temperature.html"> <img class="img-fluid img-right" src="../Resources/assets/max_temperature.png"></a>
+            <a href="max_temperature.html"> <img class="img-fluid img-right"
+                src="../Resources/assets/max_temperature.png"></a>
           </div>
           <div class="col-lg-6 col-md-3">
             <a href="wind_speed.html"> <img class="img-fluid img-right" src="../Resources/assets/wind_speed.png"></a>
@@ -109,7 +110,6 @@
         </div>
       </div>
     </div>
-
 
     <!-- Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
