Restructured with index.html in the root folder to deploy on web page

--- a/html/cloudiness.html
+++ b/html/cloudiness.html
@@ -19,7 +19,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
     <!-- Clicking on the Page Name will bring the user back to the landing page -->
-    <a class="navbar-brand" href="index.html">Latitude vs Weather</a>
+    <a class="navbar-brand" href="../index.html">Latitude vs Weather</a>
 
     <!-- Responsive menu becomes a menu button when screen size shrinks -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
