--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -37,17 +37,17 @@
             Plots
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
-            <a class="dropdown-item" href="humidity.html">Humidity</a>
-            <a class="dropdown-item" href="max_temperature.html">Temperature</a>
-            <a class="dropdown-item" href="wind_speed.html">Wind Speed</a>
+            <a class="dropdown-item" href="html/cloudiness.html">Cloudiness</a>
+            <a class="dropdown-item" href="html/humidity.html">Humidity</a>
+            <a class="dropdown-item" href="html/max_temperature.html">Temperature</a>
+            <a class="dropdown-item" href="html/wind_speed.html">Wind Speed</a>
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="comparison.html">Comparison</a>
+          <a class="nav-link" href="html/comparison.html">Comparison</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="data.html">Data</a>
+          <a class="nav-link" href="html/data.html">Data</a>
         </li>
       </ul>
     </div>
@@ -67,7 +67,7 @@
         </div>
         <div class="row">
           <div class="col-lg-12 col-sm-12">
-            <img class="img-fluid img-float" src="../Resources/assets/cloudiness.png">
+            <img class="img-fluid img-float" src="Resources/assets/cloudiness.png">
             <p class="text text-justify">The purpose of this project was to analyze how different characteristics of
               weather change
               as we approach
@@ -95,17 +95,17 @@
             takes up half the row within the container on large screen, entire row on small screen -->
           <div class="col-lg-6 col-md-3">
             <!-- img-fluid class added to make images more responsive and not overlap when screen changes size -->
-            <a href="cloudiness.html"> <img class="img-fluid img-right" src="../Resources/assets/cloudiness.png"></a>
+            <a href="html/cloudiness.html"> <img class="img-fluid img-right" src="Resources/assets/cloudiness.png"></a>
           </div>
           <div class="col-lg-6 col-md-3">
-            <a href="humidity.html"> <img class="img-fluid img-right" src="../Resources/assets/humidity.png"></a>
+            <a href="html/humidity.html"> <img class="img-fluid img-right" src="Resources/assets/humidity.png"></a>
           </div>
           <div class="col-lg-6 col-md-3">
-            <a href="max_temperature.html"> <img class="img-fluid img-right"
-                src="../Resources/assets/max_temperature.png"></a>
+            <a href="html/max_temperature.html"> <img class="img-fluid img-right"
+                src="Resources/assets/max_temperature.png"></a>
           </div>
           <div class="col-lg-6 col-md-3">
-            <a href="wind_speed.html"> <img class="img-fluid img-right" src="../Resources/assets/wind_speed.png"></a>
+            <a href="html/wind_speed.html"> <img class="img-fluid img-right" src="Resources/assets/wind_speed.png"></a>
           </div>
         </div>
       </div>
