Updated text on the page

--- a/index.html
+++ b/index.html
@@ -75,8 +75,10 @@
               of over 500
               cities scattered across the world. Next, we utilized Python and the Matplotlib module to inspect the data
               and create visual
-              representations of cloudiness, humidity, max temperature, and wind speed against latitude. This site
-              includes those
+              representations of cloudiness, humidity, max temperature, and wind speed against latitude. And finally, we
+              analyzed those results for significance and even tested the Northern and Southern Hemispheres separately
+              for more insight. This site
+              includes the
               visualizations accompanied by insights into potential trends and a sample dataset.</p>
           </div>
         </div>
